--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,45 @@
+#Descomentar para probar localmente. Comentar para subir a github y probar en contenedor.
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.use-new-id-generator-mappings=false
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
+#spring.jpa.database=ORACLE
+#spring.jpa.properties.hibernate.default_schema=hernan
+#spring.datasource.driver-class-name=org.jdbc.OracleDriver
+#spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+#spring.sql.init.platform=oracle
+#spring.jpa.properties.hibernate.id.new_generator_mappings=false
+#INICIO
+spring.jpa.properties.hibernate.default_schema=HERNAN
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
+spring.datasource.url=jdbc:oracle:thin:@//localhost:1521/xe
+spring.datasource.username= system
+spring.datasource.password=oracle
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+server.port=8006
+spring.servlet.multipart.max-file-size=128MB
+spring.servlet.multipart.max-request-size=128MB
+spring.servlet.multipart.enabled=true
+#document.upload-directory=uploads
+#FIN
+#spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+#spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
+#google drive
+#spring.resources.cache.cachecontrol.max-age=1
+
+#google.secret.key.path=classpath:keys/client_secret_gd.json
+#google.oauth.callback.uri=http://localhost:8006/oauth
+#google.credentials.folder.path=file
+
+#fin google drive
+
+# HikariCP settings
+#spring.datasource.hikari.minimumIdle=5
+#spring.datasource.hikari.maximumPoolSize=20
+#spring.datasource.hikari.idleTimeout=30000
+#spring.datasource.hikari.maxLifetime=2000000
+#spring.datasource.hikari.connectionTimeout=30000
+#spring.datasource.hikari.poolName=HikariPoolBooks
