--- a/plataformaGestionPredial/package.json
+++ b/plataformaGestionPredial/package.json
@@ -32,6 +32,7 @@
     "bootstrap": "^5.2.0",
     "bootstrap-icons": "^1.10.2",
     "rxjs": "~7.5.0",
+    "sweetalert2": "^11.7.12",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
