--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,7 @@ services:
       context: ./
       dockerfile: Dockerfile
     container_name: app-pgp
+    working_dir: /var
     environment: 
       #- spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
       - SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT=org.hibernate.dialect.Oracle10gDialect
@@ -48,7 +49,9 @@ services:
       - SPRING_SERVLET_MULTIPART_MAX_REQUEST_SIZE=128MB
       - SPRING_SERVLET_MULTIPART_ENABLED=true
     volumes:
-      - ./src/main/java/com/pgp:/var
+      #- ./src/main/java/com/pgp:/var
+      - ./:/var:cached
+      #- ./uploadedDocuments:/var
     ports: 
         - 8006:8006
     networks:
