corrección problema zona horaria

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,7 +44,7 @@ services:
       - SPRING_DATASOURCE_USERNAME=system
       - SPRING_DATASOURCE_PASSWORD=oracle
       - SPRING_JPA_SHOW_SQL=true
-      - TZ="Asia/Kolkata"
+      - TZ="UTC"
       - SPRING_SERVLET_MULTIPART_MAX_FILE_SIZE=128MB
       - SPRING_SERVLET_MULTIPART_MAX_REQUEST_SIZE=128MB
       - SPRING_SERVLET_MULTIPART_ENABLED=true
