--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,7 +22,15 @@ server.port=8006
 spring.servlet.multipart.max-file-size=128MB
 spring.servlet.multipart.max-request-size=128MB
 spring.servlet.multipart.enabled=true
-document.upload-directory=uploads
+spring.application.name=pgp-main
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+spring.web.resources.static-locations[1]=file:/src/main/resources/images/
+spring.web.resources.static-locations[0]=classpath:/images/
+spring.web.resources.chain.cache=false
+spring.web.resources.cache.cachecontrol.no-cache=true
+spring.web.resources.cache.cachecontrol.cache-public=true 
+#spring.resources.static-locations=classpath:/static/,file:/Users/foo/data
+#document.upload-directory=uploads
 #FIN
 #spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 #spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
