Se agregan nuevas tablas: workers y works

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,7 +28,8 @@ spring.web.resources.static-locations[1]=file:/src/main/resources/images/
 spring.web.resources.static-locations[0]=classpath:/images/
 spring.web.resources.chain.cache=false
 spring.web.resources.cache.cachecontrol.no-cache=true
-spring.web.resources.cache.cachecontrol.cache-public=true 
+spring.web.resources.cache.cachecontrol.cache-public=true
+#spring.jackson.time-zone=America/Mexico_City
 #spring.resources.static-locations=classpath:/static/,file:/Users/foo/data
 #document.upload-directory=uploads
 #FIN
