--- a/plataformaGestionPredial/package.json
+++ b/plataformaGestionPredial/package.json
@@ -29,8 +29,12 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@ng-bootstrap/ng-bootstrap": "^13.0.0",
     "@popperjs/core": "^2.10.2",
+    "angular-datatables": "^14.0.0",
     "bootstrap": "^5.2.0",
     "bootstrap-icons": "^1.10.2",
+    "datatables.net": "^1.11.3",
+    "datatables.net-dt": "^1.11.3",
+    "jquery": "^3.6.0",
     "rxjs": "~7.5.0",
     "sweetalert2": "^11.7.12",
     "tslib": "^2.3.0",
@@ -40,7 +44,9 @@
     "@angular-devkit/build-angular": "^14.2.6",
     "@angular/cli": "~14.2.6",
     "@angular/compiler-cli": "^14.2.0",
+    "@types/datatables.net": "^1.10.21",
     "@types/jasmine": "~4.0.0",
+    "@types/jquery": "^3.5.9",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
