--- a/plataformaGestionPredial/package.json
+++ b/plataformaGestionPredial/package.json
@@ -35,6 +35,8 @@
     "datatables.net": "^1.11.3",
     "datatables.net-dt": "^1.11.3",
     "jquery": "^3.6.0",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.6.0",
     "rxjs": "~7.5.0",
     "sweetalert2": "^11.7.12",
     "tslib": "^2.3.0",
