--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ uploadedDocuments/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+plataformaGestionPredial/src/assets/imagenes
+src/main/resources/images
 
 ### STS ###
 .apt_generated
