--- a/plataformaGestionPredial/package.json
+++ b/plataformaGestionPredial/package.json
@@ -29,6 +29,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@ng-bootstrap/ng-bootstrap": "^13.0.0",
     "@popperjs/core": "^2.10.2",
+    "ag-grid-angular": "^31.3.1",
     "angular-datatables": "^14.0.0",
     "bootstrap": "^5.2.0",
     "bootstrap-icons": "^1.10.2",
@@ -37,6 +38,7 @@
     "jquery": "^3.6.0",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.6.0",
+    "primeng": "~16.0.2",
     "rxjs": "~7.5.0",
     "sweetalert2": "^11.7.12",
     "tslib": "^2.3.0",
