--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,9 +13,9 @@
 #INICIO
 spring.jpa.properties.hibernate.default_schema=HERNAN
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
-spring.datasource.url=jdbc:oracle:thin:@//localhost:1521/xe
-spring.datasource.username= system
-spring.datasource.password=oracle
+#spring.datasource.url=jdbc:oracle:thin:@//localhost:1521/xe
+#spring.datasource.username= system
+#spring.datasource.password=oracle
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 server.port=8006
@@ -23,7 +23,6 @@ spring.servlet.multipart.max-file-size=128MB
 spring.servlet.multipart.max-request-size=128MB
 spring.servlet.multipart.enabled=true
 spring.application.name=pgp
-defaultTenant=tenant_1
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 spring.web.resources.static-locations[1]=file:/src/main/resources/images/
 spring.web.resources.static-locations[0]=classpath:/images/
