--- a/plataformaGestionPredial/package.json
+++ b/plataformaGestionPredial/package.json
@@ -28,6 +28,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@ng-bootstrap/ng-bootstrap": "^13.0.0",
+    "@ng-select/ng-select": "^9.1.0",
     "@popperjs/core": "^2.10.2",
     "ag-grid-angular": "^31.3.1",
     "angular-datatables": "^14.0.0",
@@ -38,7 +39,7 @@
     "jquery": "^3.6.0",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.6.0",
-    "primeng": "~16.0.2",
+    "primeng": "^14.2.3",
     "rxjs": "~7.5.0",
     "sweetalert2": "^11.7.12",
     "tslib": "^2.3.0",
