--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,19 @@
 version: "3.5"
 services:      
   db:
-    image: oracleinanutshell/oracle-xe-11g:latest
+    image: wnameless/oracle-xe-11g-r2
+    # image: oracleinanutshell/oracle-xe-11g:latest
+    # build: 
+    #   context: ./oracle
+    #   dockerfile: Dockerfile
     container_name: db-pgp
     ports: 
       - 1521:1521
     environment:
-      #- ORACLE_CHARACTERSET=UTF8
+      - ORACLE_CHARACTERSET=AL32UTF8
+      - NLS_LANG=AMERICAN_AMERICA.AL32UTF8
       - ORACLE_ALLOW_REMOTE=true
+      - INIT_DB=true
     volumes:
       - ./oracle:/docker-entrypoint-initdb.d
     networks:
