--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,8 +24,8 @@ spring.servlet.multipart.max-request-size=128MB
 spring.servlet.multipart.enabled=true
 spring.application.name=pgp
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
-spring.web.resources.static-locations[1]=file:/src/main/resources/images/
-spring.web.resources.static-locations[0]=classpath:/images/
+#spring.web.resources.static-locations[1]=file:/src/main/resources/images/
+spring.web.resources.static-locations=classpath:/images/
 spring.web.resources.chain.cache=false
 spring.web.resources.cache.cachecontrol.no-cache=true
 spring.web.resources.cache.cachecontrol.cache-public=true
