--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,8 @@ uploadedDocuments/
 !**/src/test/**/target/
 plataformaGestionPredial/src/assets/imagenes
 src/main/resources/images
-target/pgp-0.0.1-SNAPSHOT.jar
+*.jar
+bin/
 
 ### STS ###
 .apt_generated
